Color and Logo Changes

--- a/templates/room.html
+++ b/templates/room.html
@@ -14,7 +14,7 @@
               ></path>
             </svg>
           </a>
-          <h3>Study Room</h3>
+          <h3>Connect</h3>
         </div>
 
         {% if room.host == request.user %}
