--- a/static/style.css
+++ b/static/style.css
@@ -1,15 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
 :root {
-  --color-main: #71c6dd;
+  --color-main: #f58840;
   --color-main-light: #e1f6fb;
-  --color-dark: #3f4156;
-  --color-dark-medium: #51546e;
-  --color-dark-light: #696d97;
+  --color-dark: #1A1A40;
+  --color-dark-medium: #556080;
+  --color-dark-light: #BF9270;
   --color-light: #e5e5e5;
   --color-gray: #8b8b8b;
   --color-light-gray: #b2bdbd;
-  --color-bg: #2d2d39;
+  --color-bg: #090910;
   --color-success: #5dd693;
   --color-error: #fc4b0b;
 }
@@ -1162,4 +1162,17 @@ a {
   font-weight: 500;
   color: var(--color-main);
   font-weight: 1.4rem;
+}
+
+
+/* Custom CSS */
+
+.copyrigths {
+  text-align: center;
+  color: var(--color-dark-light);
+  padding: 18px;
+  background-color: var(--color-dark);
+  margin-top: 10px;
+  bottom: 0;
+  width: 100%;
 }
