--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'style.css' %}" />
-    <title>Chat Room</title>
+    <title>Connect</title>
   </head>
 
   <body>
@@ -26,6 +26,8 @@
         {% block content %} {% endblock %}
     </div>
     
+    
+    <h2 class="copyrigths">&copy; DESIGNED BY CN & HR</h2>
     <script src="{% static 'script.js' %}"></script>
   </body>
 </html>
