--- a/templates/delete.html
+++ b/templates/delete.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="layout__body">
-                <form class="form" action="#">
+                <form class="form" action="" method="post">
                     {% csrf_token %}
                     <div class="form__group">
                         <p>Are you sure you want to delete "{{obj}}"</p>
