--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -15,8 +15,8 @@
         <form class="form" action="" method="post">
           {% csrf_token %}
           <div class="form__group form__group">
-            <label for="room_name">Username</label>
-            <input id="username" name="username" type="text" placeholder="e.g. dennis_ivy" />
+            <label for="room_name">Email</label>
+            <input id="username" name="username" type="email" placeholder="Enter Your Email" />
           </div>
           <div class="form__group">
             <label for="password">Password</label>
