--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,8 +3,8 @@
 <header class="header header--loggedIn">
     <div class="container">
       <a href="{% url 'index' %}" class="header__logo">
-        <img src="{% static 'images/logo.svg' %}" />
-        <h1>Chat Room</h1>
+        <img src="{% static 'images/logo.png' %}" />
+        <h1>Connect</h1>
       </a>
       <form class="header__search" method="get" action="{% url 'index' %}">
         <label>
