--- a/templates/profile.html
+++ b/templates/profile.html
@@ -31,7 +31,7 @@
 
       <div class="roomList__header">
         <div>
-          <h2>Chat Rooms By THEH4CKER</a>
+          <h2>Chat Rooms By CN & HR</a>
           </h2>
         </div>
       </div>
