--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
       </div>
       <div class="roomList__header">
         <div>
+          <!-- Chin Test -->
           <h2>Connect</h2>
           <p>{{room_count}} Rooms available</p>
         </div>
