--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     </div>
     
     
-    <h2 class="copyrigths">&copy; DESIGNED BY CN & HR</h2>
+    <h2 class="copyrigths">&copy; CREATED BY CN & HR</h2>
     <script src="{% static 'script.js' %}"></script>
   </body>
 </html>
