--- a/templates/room.html
+++ b/templates/room.html
@@ -107,8 +107,88 @@
               <div class="thread__details">
                 {{message.body}}
               </div>
+
+              {% if request.user.is_authenticated %}
+              <div class="reply-msg">
+                <a data-bs-toggle="collapse" href="#replyBox{{message.id}}" role="button" aria-expanded="false" aria-controls="collapseExample">
+                  reply
+                </a>
+                <div class="collapse" id="replyBox{{message.id}}">
+                  <div class="card card-body">
+                    <div class="room__message room__message__reply">
+                      <form action="" method="post">
+                        {% csrf_token %}
+                        <input type="text" name="body" placeholder="Write your reply here..." />
+                        <input type="hidden" name="messageId" value="{{message.id}}">
+                      </form>
+                    </div>
+                  </div>
+                </div>              
+              </div>
+              {% endif %}
+              {% for reply in room_reply %}
+                {% if reply.parent.id == message.id %}
+                <div class="thread thread-reply">
+                  <div class="thread__top">
+                    <div class="thread__author">
+                      <a href="{% url 'userProfile' reply.user.id %}" class="thread__authorInfo">
+                        <span>@{{reply.user.username}}</span>
+                      </a>
+                      <span class="thread__date">{{reply.created|timesince}} ago</span>
+                    </div>
+                    {% if reply.user == request.user %}
+                    <div class="thread__delete">
+                      <a href="{% url 'delete_message' reply.id %}">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                          <title>remove</title>
+                          <path
+                            d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z"
+                          ></path>
+                        </svg>
+                      </a>
+                    </div>
+                    {% endif %}
+                  </div>
+                  <div class="thread__details">
+                    {{reply.body}}
+                  </div>
+                </div>
+                {% endif %}
+              {% endfor %}
             </div>
             {% endfor %}
+
+            
+            <!-- {% for reply in room_reply %}
+            <div class="thread">
+              <div class="thread__top">
+                <div class="thread__author">
+                  <a href="{% url 'userProfile' reply.user.id %}" class="thread__authorInfo">
+                    <div class="avatar avatar--small">
+                      <img src="{{reply.user.avatar.url}}" />
+                    </div>
+                    <span>@{{reply.user.username}}</span>
+                  </a>
+                  <span class="thread__date">{{reply.created|timesince}} ago</span>
+                </div>
+                {% if reply.user == request.user %}
+                <div class="thread__delete">
+                  <a href="{% url 'delete_message' reply.id %}">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                      <title>remove</title>
+                      <path
+                        d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z"
+                      ></path>
+                    </svg>
+                  </a>
+                </div>
+                {% endif %}
+              </div>
+              <div class="thread__details">
+                {{reply.body}}
+              </div>
+            </div>
+            {% endfor %} -->
           </div>
         </div>
       </div>
@@ -117,6 +197,7 @@
         <form action="" method="post">
           {% csrf_token %}
           <input type="text" name="body" placeholder="Write your message here..." />
+          <input type="hidden" name="messageId" value="">
         </form>
       </div>
       {% endif %}
